# avd-compose

./: README.md  pyproject.toml
avd_compose/: cli.py  parser.py
avd_compose/androidstudio/: __init__.py  avdmanager.py  emulator.py  sdkmanager.py
avd_compose/configs/v1/: __init__.py
avd_compose/utils/: formatter.py  shell.py  yaml.py
examples/: avd-compose.yml
tests/: test_avd_compose.py
