[tool.poetry]
name = "avd-compose"
version = "0.1.0"
description = "Define and run android virtual devices"
license = "GPL-3.0"
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/f9n/avd-compose"
repository = "https://github.com/f9n/avd-compose"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
