[tool.poetry]
name = "avd-compose"
version = "0.3.0"
description = "Define and run android virtual devices"
license = "GPL-3.0"
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/f9n/avd-compose"
repository = "https://github.com/f9n/avd-compose"

[tool.poetry.dependencies]
python = "^3.4"
click = "^7.0"
PyYAML = "^3.13"
"delegator.py" = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "^18.9b0", python = "^3.6" }

[tool.poetry.scripts]
avd-compose = "avd_compose.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
